fix: allow overflow on code snippets for tooltips

--- a/packages/typescriptlang-org/src/templates/markdown-twoslash.scss
+++ b/packages/typescriptlang-org/src/templates/markdown-twoslash.scss
@@ -32,7 +32,7 @@ pre {
 }
 
 pre.shiki {
-  overflow-x: auto;
+  overflow-x: visible;
 }
 
 pre.shiki:hover .dim {
@@ -95,7 +95,7 @@ pre .code-container {
 }
 
 /* The try button */
-pre .code-container>a {
+pre .code-container > a {
   position: absolute;
   right: 8px;
   bottom: 8px;
@@ -111,12 +111,12 @@ pre .code-container>a {
 
 /* Respect no animations */
 @media (prefers-reduced-motion: reduce) {
-  pre .code-container>a {
+  pre .code-container > a {
     transition: none;
   }
 }
 
-pre .code-container>a:hover {
+pre .code-container > a:hover {
   color: white;
   background-color: #719af4;
 }
@@ -211,7 +211,7 @@ pre .inline-completions ul.dropdown {
   display: inline-block;
   position: absolute;
   width: 240px;
-  background-color: #E7E7E7;
+  background-color: #e7e7e7;
   color: #333;
   padding-top: 4px;
   font-family: var(--code-font);
